# youtube_download

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
youtube_download/: __init__.py  __main__.py  exception.py  gui.py  options.py  web.py  youtube.py
youtube_download/static/js/: script.js
youtube_download/templates/: home.html
youtube_downloader/: __main__.py  exception.py  gui.py  options.py  os_operations.py  web.py  youtube.py
youtube_downloader/templates/: error.html
youtube_downloaders/: __main__.py  gui.py  options.py  web.py  youtube.py
youtube_downloaders.egg-info/: PKG-INFO
youtube_downloaders/static/styles/: style.css
youtube_downloaders/templates/: home.html
