[tool.poetry]
name = "youtube_downloader"
version = "0.1.0"
description = "Package to download youtube videos and playlist"
authors = [
    { name = "Ishan Mahajan", email = "imahajan0007@gmail.com"},
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
pytube = "^15.0.0"

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
youtube_downloader = "youtube_downloader.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "youtube_downloader.VERSION"}

[tool.setuptools]
packages = ["youtube_downloader"]
