[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube_downloader"
version = "0.1.0"
description = "Package to download youtube videos and playlist"
authors = [
    { name = "Ishan Mahajan", email = "imahajan0007@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "Flask==3.0.0",
    "pytube==15.0.0",
]
dynamic = ["version"]

[project.scripts]
youtube_downloader = "youtube_downloader.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "youtube_downloader.VERSION"}

[tool.setuptools]
packages = ["youtube_downloader"]
